# tumult

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  RUST_PATTERNS_AUDIT.md  SECURITY-AUDIT.md  SECURITY.md  clippy.toml  deny.toml  install.sh  start.sh
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: plugin-suggestion.yml
.github/workflows/: ci.yml  coverage.yml  pages.yml  release.yml
collector/: docker-compose.yaml  otel-collector-config.yaml  otel-collector-dev.yaml  otel-collector-grafana.yaml  otel-collector-signoz.yaml
docker/: Dockerfile.sshd  Dockerfile.tumult  Dockerfile.tumult-mcp  README.md  docker-compose.aqe.yml  docker-compose.observability.yml  docker-compose.tumult.yml  docker-compose.yml  init-postgres.sql  otel-collector-e2e.yaml  otel-collector-signoz.yaml  prometheus.yml
docker/signoz/dashboards/: import-dashboards.sh  tumult-actions-probes.json  tumult-clickhouse.json  tumult-compliance-dora-nis2.json  tumult-containers-all.json  tumult-containers-host.json  tumult-kafka.json  (+15 more)
docker/tumult-collector/: Dockerfile  builder-config.yaml  config-test.yaml  config.yaml
docs/: CNAME  _config.yml  architecture-audit.md  competitive-analysis.md  data-lifecycle.md  index-old.md  index.html  index.md  regulatory-mapping.md  resilience-metadata-standard.md  security-assessment.md  technical_design.md  testprotocol.md
docs/adr/: ADR-001-platform-runtime.md  ADR-001-rust-for-chaos-engineering.md  ADR-001-rust-platform.md  ADR-002-data-formats.md  ADR-002-data-observability.md  ADR-002-toon-data-format.md  ADR-003-addendum-span-hierarchy.md  ADR-003-experiment-model.md  ADR-003-observability.md  ADR-003-opentelemetry-first.md  ADR-004-extensibility.md  ADR-004-plugin-system.md  ADR-004-script-based-plugins.md  ADR-005-analytics.md  ADR-005-five-phase-model.md  ADR-005-resilience-namespace.md  ADR-006-epoch-nanoseconds.md  ADR-006-ssh-transport.md  ADR-007-five-phase-data-model.md  ADR-007-kubernetes-native.md  ADR-008-arrow-duckdb-analytics.md  ADR-008-plugin-discovery-order.md  ADR-009-load-testing.md  ADR-009-statistical-baseline-methods.md  ADR-010-persistent-analytics.md  index.md
docs/architecture/: tumult-architecture.drawio
docs/blog/: 01-beyond-uptime.md  01-introducing-tumult.md  02-ai-advantage.md  03-built-in-observability.md  04-plugin-system.md  05-experiment-format.md  06-analytics-pipeline.md  07-kubernetes-chaos.md  08-statistical-baselines.md  09-regulatory-compliance.md  10-chaos-under-load.md  11-road-ahead.md  12-traces-in-production.md  13-load-during-chaos.md  14-gameday-is-here.md  15-road-ahead.md  16-mcp-http-transport.md  17-tumult-1.0.md  index.md
docs/demo/: tumult-demo.cast
docs/guides/: analytics-guide.md  baseline-guide.md  cli-reference.md  execution-flow.md  experiment-format.md  index.md  load-testing-guide.md  observability-setup.md  scheduling.md  token-efficiency.md
docs/plugins/: authoring-guide.md  index.md  plugin-manifest-spec.md  tumult-containers.md  tumult-db.md  tumult-kafka.md  tumult-kubernetes.md  tumult-loadtest.md  tumult-network.md  tumult-process.md  tumult-ssh.md  tumult-stress.md
docs/reference/: index.md
docs_local/: code_tumult.md  rev_tumult.md  signoz-dashboard-gap-analysis.md
examples/: dns-redirect-chaos.toon  k8s-pod-chaos.toon  pg-load-chaos.toon  pg-under-load.toon  postgres-failover.toon  pumba-latency.toon  redis-chaos.toon  ssh-remote.toon
examples/k6/: pg-load.js  smoke-test.js
gamedays/: pg-connection-kill.toon  pg-container-pause.toon  pg-cpu-stress.toon  pg-mem-stress.toon  q2-postgres-resilience.gameday.journal.toon  q2-postgres-resilience.gameday.toon
infra/: README.md  docker-compose.yml
plugins/lib/: validate.sh
plugins/tumult-containers/: plugin.toon
plugins/tumult-db-mysql/: plugin.toon
plugins/tumult-db-postgres/: plugin.toon
plugins/tumult-db-redis/: plugin.toon
plugins/tumult-kafka/: plugin.toon
plugins/tumult-loadtest/: plugin.toon
plugins/tumult-network/: plugin.toon
plugins/tumult-process/: plugin.toon
plugins/tumult-pumba/: plugin.toon
plugins/tumult-stress/: plugin.toon
scripts/: aqe-mcp-client.mjs  demo-mcp-http.sh  gameday-demo.sh
tumult-analytics/: Cargo.toml  README.md
tumult-analytics/src/: arrow_convert.rs  backend.rs  duckdb_store.rs  error.rs  export.rs  lib.rs  query_row.rs  telemetry.rs
tumult-baseline/: Cargo.toml  README.md
tumult-baseline/benches/: stats_bench.rs
tumult-baseline/src/: acquisition.rs  anomaly.rs  lib.rs  stats.rs  telemetry.rs  tolerance.rs
tumult-baseline/tests/: proptest_stats.proptest-regressions  proptest_stats.rs
tumult-cli/: Cargo.toml
tumult-cli/src/: commands.rs  lib.rs  main.rs
tumult-cli/tests/: e2e_analytics.rs  e2e_docker.rs  e2e_script_plugin.rs  plugin_scripts_test.rs  postgres_plugin_test.rs
tumult-clickhouse/: Cargo.toml  README.md
tumult-clickhouse/src/: config.rs  error.rs  lib.rs  store.rs  telemetry.rs
tumult-core/: Cargo.toml  README.md
tumult-core/fuzz/: Cargo.toml
tumult-core/fuzz/fuzz_targets/: fuzz_experiment_deserialize.rs
tumult-core/src/: controls.rs  engine.rs  execution.rs  journal.rs  lib.rs  runner.rs  types.rs
tumult-core/tests/: audit_findings.rs  background_activity_tests.rs  experiment_integration.rs  otel_spans.rs
tumult-kubernetes/: Cargo.toml  README.md
tumult-kubernetes/src/: actions.rs  error.rs  lib.rs  probes.rs  telemetry.rs
tumult-mcp/: Cargo.toml  README.md
tumult-mcp/src/: error.rs  handler.rs  lib.rs  main.rs  telemetry.rs  tools.rs
tumult-otel/: Cargo.toml  README.md
tumult-otel/src/: attributes.rs  config.rs  instrument.rs  lib.rs  metrics.rs  telemetry.rs
tumult-plugin/: Cargo.toml  README.md
tumult-plugin/src/: discovery.rs  executor.rs  lib.rs  manifest.rs  registry.rs  telemetry.rs  traits.rs
tumult-ssh/: Cargo.toml  README.md
tumult-ssh/src/: config.rs  error.rs  lib.rs  pool.rs  session.rs  telemetry.rs
tumult-test-utils/: Cargo.toml
tumult-test-utils/src/: lib.rs
(+78 files in other folders)
