[workspace]
resolver = "2"
members = [
    "tumult-cli",
    "tumult-core",
    "tumult-plugin",
    "tumult-otel",
    # Phase 1
    # "tumult-ssh",
    # "tumult-stress",
    # "tumult-containers",
    # "tumult-process",
    # Phase 2
    # "tumult-kubernetes",
    # "tumult-db",
    # "tumult-kafka",
    # "tumult-http",
    # Phase 3
    # "tumult-cloud-aws",
    # "tumult-cloud-gcp",
    # "tumult-cloud-azure",
    # "tumult-mcp",
    # "tumult-report",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/mwigge/tumult"
description = "Rust-native chaos engineering platform with TOON format and OpenTelemetry observability"
keywords = ["chaos-engineering", "resilience", "observability", "opentelemetry", "toon"]
categories = ["command-line-utilities", "development-tools::testing"]

[workspace.dependencies]
# Serialization + TOON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = "0.4"

# Async runtime — library crates should override with minimal features
tokio = { version = "1", features = ["full"] }
tokio-minimal = { package = "tokio", version = "1", features = ["rt", "macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# OpenTelemetry
opentelemetry = { version = "0.31", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.31"

# Tracing (Rust idiomatic) + OTel bridge
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Collections
indexmap = { version = "2", features = ["serde"] }
