[workspace]
resolver = "2"
members = [
    "tumult-cli",
    "tumult-core",
    "tumult-plugin",
    "tumult-otel",
    "tumult-baseline",
    # Phase 1
    "tumult-ssh",
    # "tumult-stress",
    # "tumult-containers",
    # "tumult-process",
    # Phase 2
    "tumult-analytics",
    "tumult-kubernetes",
    # "tumult-db",
    # "tumult-kafka",
    # "tumult-http",
    # Phase 3
    "tumult-mcp",
    # Phase 4
    "tumult-clickhouse",
    "tumult-test-utils",
    # "tumult-cloud-aws",
    # "tumult-cloud-gcp",
    # "tumult-cloud-azure",
    # "tumult-report",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/mwigge/tumult"
description = "Rust-native chaos engineering platform with TOON format and OpenTelemetry observability"
keywords = ["chaos-engineering", "resilience", "observability", "opentelemetry", "toon"]
categories = ["command-line-utilities", "development-tools::testing"]

[workspace.dependencies]
# Serialization + TOON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = "0.4"

# Async runtime — library crates should override with minimal features
tokio = { version = "1", features = ["full"] }
tokio-minimal = { package = "tokio", version = "1", features = ["rt", "macros", "time"] }

# CLI
clap = { version = "4", features = ["derive"] }

# OpenTelemetry
opentelemetry = { version = "0.31", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry-stdout = { version = "0.31", features = ["trace"] }

# Tracing (Rust idiomatic) + OTel bridge
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Analytics (Phase 2) — Arrow columnar format + Parquet + DuckDB
arrow = { version = "58", features = ["json", "ipc", "ffi"] }
parquet = { version = "58", features = ["arrow", "snap", "zstd"] }
duckdb = { version = "1.10501", features = ["bundled", "appender-arrow", "vtab-arrow"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Collections
indexmap = { version = "2", features = ["serde"] }

# SSH
# rsa feature disabled: RUSTSEC-2023-0071 (Marvin Attack) has no fix; RSA keys not used in tumult-ssh
russh = { version = "0.59", default-features = false, features = ["flate2", "aws-lc-rs"] }
async-trait = "0.1"

# Kubernetes
kube = { version = "3.1", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# MCP (Model Context Protocol)
rust-mcp-sdk = "0.9"

# Cancellation
tokio-util = "0.7"

# Pattern matching (used in tumult-core for experiment-name validation)
regex-lite = "0.1"

# Constant-time comparison (used in tumult-mcp for bearer-token auth)
subtle = "2.6"

# Secure memory zeroing for sensitive credentials (used in tumult-ssh)
zeroize = { version = "1.8", features = ["derive"] }

# ClickHouse client (used in tumult-clickhouse)
clickhouse = { version = "0.14", features = ["time", "uuid"] }

# SSH known-hosts path resolution (used in tumult-analytics, tumult-ssh)
dirs-next = "2"

# Temporary file/directory creation (dev-dependency across all crates)
tempfile = "3"

# Speed up dev builds for heavy C/C++ dependencies (DuckDB, Arrow, Parquet).
# Only affects dependencies, not workspace crates (those stay at -O0 for fast
# incremental compilation with debug info).
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# Strip only debug info, preserve symbol names for panic backtraces.
# Use `strip = true` in Dockerfiles for smaller distribution binaries.
strip = "debuginfo"

[workspace.lints.rust]
# Deny all warnings so `cargo build` outside CI is also strict.
warnings = "deny"

[workspace.lints.clippy]
# Mirror the `-W clippy::pedantic` flag used in CI and the pre-commit hook.
pedantic = "warn"

