[package]
name = "tumult-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Embedded analytics for Tumult — DuckDB, Arrow, Parquet"

[dependencies]
tumult-core = { path = "../tumult-core" }
tumult-baseline = { path = "../tumult-baseline" }
arrow = { workspace = true }
parquet = { workspace = true }
duckdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toon-format = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs-next = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
