[package]
name = "tumult-baseline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Baseline acquisition and statistical methods for Tumult experiments"

[dependencies]
tumult-otel = { path = "../tumult-otel" }
thiserror = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "stats_bench"
harness = false
