[package]
name = "tumult-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI binary for the Tumult chaos engineering platform"

[lib]
name = "tumult_cli"
path = "src/lib.rs"

[[bin]]
name = "tumult"
path = "src/main.rs"

[dependencies]
tumult-core = { path = "../tumult-core" }
tumult-analytics = { path = "../tumult-analytics" }
tumult-clickhouse = { path = "../tumult-clickhouse" }
tumult-plugin = { path = "../tumult-plugin" }
tumult-otel = { path = "../tumult-otel" }
tumult-kubernetes = { path = "../tumult-kubernetes" }
tumult-ssh = { path = "../tumult-ssh" }
kube = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
toon-format = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
indexmap = { workspace = true }
