[package]
name = "tumult-clickhouse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ClickHouse analytics backend for Tumult — shared storage with SigNoz"

[dependencies]
tumult-core = { path = "../tumult-core" }
tumult-analytics = { path = "../tumult-analytics" }
tumult-otel = { path = "../tumult-otel" }
clickhouse = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
