[package]
name = "tumult-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core engine for Tumult chaos engineering platform"

[dependencies]
tumult-plugin = { path = "../tumult-plugin" }
tumult-otel = { path = "../tumult-otel" }
serde = { workspace = true }
toon-format = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
