[package]
name = "tumult-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core engine for Tumult chaos engineering platform"

[dependencies]
tumult-plugin = { path = "../tumult-plugin" }
tumult-baseline = { path = "../tumult-baseline" }
serde = { workspace = true }
serde_json = { workspace = true }
toon-format = { workspace = true }
tokio-minimal = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
