[package]
name = "tumult-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core engine for Tumult chaos engineering platform"

[dependencies]
tumult-plugin = { path = "../tumult-plugin" }
tumult-baseline = { path = "../tumult-baseline" }
serde = { workspace = true }
serde_json = { workspace = true }
toon-format = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
regex-lite = "0.1"
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
opentelemetry_sdk = { workspace = true, features = ["testing"] }
