[package]
name = "tumult-kubernetes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Kubernetes chaos actions and probes for the Tumult platform"

[dependencies]
tumult-otel = { path = "../tumult-otel" }
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
