[package]
name = "tumult-otel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenTelemetry instrumentation for Tumult chaos engineering platform"

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
