[package]
name = "tumult-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Plugin system for Tumult chaos engineering platform"

[dependencies]
tumult-otel = { path = "../tumult-otel" }
serde = { workspace = true }
serde_json = { workspace = true }
toon-format = { workspace = true }
tokio = { version = "1", features = ["process", "time", "rt", "macros"] }
tracing = { workspace = true }
thiserror = { workspace = true }
opentelemetry = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["process", "time", "rt", "macros", "rt-multi-thread"] }
