[package]
name = "tumult-ssh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SSH remote execution for the Tumult chaos engineering platform"

[dependencies]
tumult-otel = { path = "../tumult-otel" }
russh = { workspace = true }
async-trait = { workspace = true }
# Minimal tokio features — library crate, not binary.
# "macros" needed for #[tokio::test] in unit tests.
tokio = { version = "1", features = ["rt", "time", "fs", "io-util", "process", "macros"] }
thiserror = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
dirs-next = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
